--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,6 +21,6 @@
     "noFallthroughCasesInSwitch": true
   },
   "include": ["."],
-  "exclude": ["vite.config.ts"],
+  "exclude": ["vite.config.ts", "supabase"],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
